# mpd-internetradio-destuck

./: Cargo.toml  README.md  install.sh  mpd-internetradio-destuck.service  readme.md
.github/workflows/: rust.yml
src/: main.rs
systemd/system/: install.sh  remove.sh  service
