[package]
name = "mpd-internetradio-destuck"
description = "Fix mpd getting stuck on internet radio when the daily disconnect happens"
version = "0.2.3"
license = "MIT"
authors = ["EdJoPaTo <git-commit-with-a-funny-long-email-address-everyone-hates-as-it-is-too-long@edjopato.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpd = "0.0.12"
