[package]
name = "mpd-internetradio-destuck"
description = "Fix mpd getting stuck on internet radio when the daily disconnect happens"
version = "0.2.5"
license = "MIT"
repository = "https://github.com/EdJoPaTo/mpd-internetradio-destuck"
authors = ["EdJoPaTo <mpd-internetradio-destuck-rust@edjopato.de>"]
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
mpd = "0.1"

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
maintainer-scripts = "systemd/system/"
systemd-units = {}
assets = [
	["target/release/mpd-internetradio-destuck", "/usr/bin/", "755"],
	["LICENSE", "/usr/share/licenses/mpd-internetradio-destuck/", "644"],
	["README.md", "/usr/share/doc/mpd-internetradio-destuck/", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/mpd-internetradio-destuck", dest = "/usr/bin/", mode = "755" },
	{ source = "LICENSE", dest = "/usr/share/licenses/mpd-internetradio-destuck/", mode = "644", doc = true },
	{ source = "README.md", dest = "/usr/share/doc/mpd-internetradio-destuck/", mode = "644", doc = true },

	{ source = "systemd/system/service", dest = "/usr/lib/systemd/system/mpd-internetradio-destuck.service", mode = "644" },
]
